--- a/intro-ggplot-slides.org
+++ b/intro-ggplot-slides.org
@@ -1,14 +1,14 @@
 #+OPTIONS: num:nil toc:nil
-#+REVEAL_TRANS: None/Fade/Slide/Convex/Concave/Zoom
-#+REVEAL_THEME: Black/White/League/Sky/Beige/Simple/Serif/Blood/Night/Moon/Solarized
-#+Title: Intro to Data Visualization with ggplot
+#+REVEAL_TRANS: None
+#+REVEAL_THEME: Solarized
+#+Title: Intro to Data Visualization with =ggplot=
 #+Author: Strauss Health Sciences Library
 #+Email: wladimir.labeikovsky@cuanschutz.edu
 
-* Intro to Data Visualization with =ggplot=
-
 * What is the Grammar of Graphics?
-
+#+BEGIN_NOTES
+Talk about the Wilkinson book...
+#+END_NOTES
 * How is the Grammar of Graphics implemented in =ggplot=?
 
 * How do these layers apply to your graph?
@@ -18,3 +18,14 @@
 * geom -> how the data is represented (type of plotting: scatter, line, ...)
 
 * Schematic of =ggplot= syntax
+#+BEGIN_SRC R
+p <- ggplot(data=<data>,
+            mapping=aes(<aesthetic>=<variable>,
+                        <aesthetic>=<variable>,
+                        <...>=<...>)
+
+p + geom_<type>(<...>)+
+scale_<mapping>_<type>(<...>)+
+coord_<type>(<...>)+
+labs(<...>)
+#+END_SRC
