--- a/intro-ggplot-handout.Rmd
+++ b/intro-ggplot-handout.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Intro to Data Visualization with ggplot"
 author: "Strauss Health Sciences Library"
-date: "8/13/2019"
+date: '`r format(Sys.Date(), "%B %d, %Y")`'
 output: pdf_document
 ---
 
