Start writing slideshow with Reveal.js

--- a/intro-ggplot-slides.Rmd
+++ b/intro-ggplot-slides.Rmd
@@ -3,35 +3,33 @@ title: "Intro to Data Visualization with ggplot"
 subtitle: "Strauss Health Sciences Library"
 date: '`r format(Sys.Date(), "%B %d, %Y")`'
 output:
-  xaringan::moon_reader:
-    lib_dir: libs
-    nature:
-      highlightStyle: github
-      highlightLines: true
-      countIncrementalSlides: false
+  revealjs::revealjs_presentation:
+    theme: night
+    highlight: zenburn
+    transition: none
 ---
 
 ```{r setup, include=FALSE}
-options(htmltools.dir.version = FALSE)
 library(tidyverse)
-library(flipbookr)
 ```
 
 # What is the Grammar of Graphics?
----
+
+
 # How is the Grammar of Graphics Implemented in ggplot?
----
+
+
 # How do these layers apply to your graph?
 
->-  aes -> how the data variables map to the elements in the graph (axes, point size, ...)
->- geom -> how the data is represented (type of plotting: scatter, line, ...)
----
+> -  aes -> how the data variables map to the elements in the graph (axes, point size, ...)
+> -  geom -> how the data is represented (type of plotting: scatter, line, ...)
+
 # Schematic of ggplot syntax
 ```{r example, eval=FALSE}
 p <- ggplot(data=<data>,
-            mapping=aes(<aesthetic>=<variable>,
-                        <aesthetic>=<variable>,
-                        <...>=<...>)
+            mapping=aes(<aesthetic> = variable,
+                        <aesthetic> = variable,
+                        <...> = ...)
 
 p + geom_<type>(<...>)+
 scale_<mapping>_<type>(<...>)+
@@ -39,18 +37,3 @@ coord_<type>(<...>)+
 labs(<...>)
 ```
 
----
-`r chunk_reveal("my_cars")`
-
-```{r my_cars, include = FALSE}
-cars %>%
-  filter(speed > 4) %>%
-  ggplot() +
-  aes(x = speed) + #BREAK
-  aes(y = dist) + #BREAK
-  geom_point(
-    alpha = .8, 
-    color = "blue" 
-    ) + 
-  aes(size = speed) #BREAK
-```
