--- a/intro-ggplot-slides.Rmd
+++ b/intro-ggplot-slides.Rmd
@@ -48,7 +48,6 @@ labs(<...>)
 ```
 
 # Could it be this difficult?
-
 ::: {.column-left}
 ```{r echo=TRUE,eval=FALSE}
 plot(iris[,-5])
@@ -59,5 +58,10 @@ plot(iris[,-5])
 plot(iris[,-5])
 ```
 :::
+
+# Help me out with this survey
+
+https://bit.ly/StraussClass
+
 
   
